Fix tests, module names.
Change-Id: I38cc06a8ac6036f3561692ff62fc73f81d2653c4